--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "jade": "^1.11.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.10.0",
+        "mongoose": "^5.10.3",
         "morgan": "^1.10.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
