--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.3",
         "morgan": "^1.10.0",
+        "node": "^19.6.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router": "^5.2.0",
